[package]
name = "mower_keyboard_cntl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rclrust = { git = "https://github.com/rclrust/rclrust.git", features = ["foxy"]}
rcl-sys = { git = "https://github.com/rclrust/rclrust.git", features = ["foxy"]}
rclrust-msg = { git = "https://github.com/rclrust/rclrust.git" }
tokio = { version = "1", features = ["full"] }
clap = "3.0"
device_query = "1.1.3"